# brainfuck

./: .editorconfig  .gitignore  .travis.yml  AUTHORS.markdown  CHANGELOG  CHANGELOG.markdown  CMakeLists.txt  CmakeListsINSTALL.txt  Doxyfile  LICENSE  Makefile  README.markdown  README.md  appveyor.yml  brainfuck
.github/workflows/: build.yml
Debug/: Brainfuck  makefile  sources.mk
Debug/src/: interpreter.d  subdir.mk
cmake/: FindEditline.cmake  FindGetopt.cmake  FindLightning.cmake  Findeditline.cmake  Findgetopt.cmake
docs/html/: annotated.html  annotated.js  brainfuck_8c_source.html  brainfuck_8h_source.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_enum.html  functions_eval.html  functions_vars.html  group__ast.html  group__ast.js  group__definitions.html  group__definitions.js  group__engine.html  group__engine.js  group__parser.html  group__parser.js  group__pass.html  group__pass.js  index.html  main_8c_source.html  modules.html  modules.js  navtreedata.js  navtreeindex0.js  structBrainfuckEngineContext.html  structBrainfuckEngineContext.js  structBrainfuckInstruction.html  structBrainfuckInstruction.js  structBrainfuckInstruction_1_1BrainfuckArgument_1_1BrainfuckMutation.html  structBrainfuckInstruction_1_1argument_1_1procedure.html  structBrainfuckInstruction_1_1offset.html  structBrainfuckParserContext.html  structBrainfuckParserContext.js  structBrainfuckParserContext_1_1BrainfuckOffsetStack.html  (+6 more)
docs/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  group__ast.tex  group__definitions.tex  group__engine.tex  group__parser.tex  group__pass.tex  modules.tex  refman.tex  structBrainfuckEngineContext.tex  structBrainfuckInstruction.tex  structBrainfuckInstruction_1_1BrainfuckArgument_1_1BrainfuckMutation.tex  structBrainfuckInstruction_1_1argument_1_1procedure.tex  structBrainfuckInstruction_1_1offset.tex  structBrainfuckParserContext.tex  structBrainfuckParserContext_1_1BrainfuckOffsetStack.tex  structBrainfuckParserContext_1_1BrainfuckOffsets.tex  structBrainfuckParserContext_1_1BrainfuckStack.tex  structBrainfuckScript.tex  unionBrainfuckInstruction_1_1BrainfuckArgument.tex  unionBrainfuckInstruction_1_1argument.tex
examples/: 196-commented.bf  196.bf  2d_table.bf  666.bf  ROT13.bf  atoi.bf  awib.bf  bench.bf  bfc.bf  bfcl.bf  bfi446.bf  bottles-1.bf  bottles.bf  bottles2.bf  bottles3.bf  bubblesort.bf  busy-beaver-overflow.bf  busy-beaver.bf  cat-1.bf  cat-2.bf  cat-3.bf  cell-size-1.bf  cell-size-2.bf  cell-size-3.bf  cell-size-4.bf  cell-size-5.bf  char.bf  counter.bf  css.bf  dbf2c.bf  dbfi.bf  decss.bf  dvorak.bf  echo.bf  factor.bf  fib.bf  hanoi-opt.bf  hanoi.bf  head.bf  hello-2.bf  (+29 more)
examples/asciiart/: asciiart.bf  asciiart.txt  chess.bf  text.bf  xmastree.bf
examples/bench/: bench-1.bf  bench-2.bf  easy-opt.bf  endtest.bf  long.bf  prttab.bf  skiploop.bf
examples/compiler/: bfc.bf
examples/interpreter/: bfbf.bf  bfi.bf  bfi446.bf  cgbfi.bf  ha.bf
examples/mandelbrot/: mandelbrot-extreme.bf  mandelbrot-huge.bf  mandelbrot-opt.bf  mandelbrot-tiny.bf  mandelbrot-titannic.bf
examples/math/: abc.bf  collatz.bf  div-10.bf  e.bf  fib.bf  golden-ratio.bf  impeccable.bf  mul-10.bf  mul.bf  pi-16.bf  pi-digits.bf  power.bf  prime-double.bf  prime.bf  random.bf  squares.bf  thuemorse.bf
examples/quine/: quine-392.bf  quine-400.bf  quine-410-commented.bf  quine-410.bf  quine-414.bf  quine-505-commented.bf  quine-505.bf  quine-540.bf  quine-550.bf  quine-8780.bf  quine-bock.bf  quine-br.bf  quine-dc.bf  quine-jb.bf  quine-jr.bf  ryanquine.bf  selfportrait.bf
examples/quine/bertram/: HEADER.txt  README.txt  t.bf  u.bf  v.bf  x.bf  y.bf  z.bf  z2.bf  z3.bf  z4.bf  z5.bf  z6.bf  z7.bf  z9.bf  z9a.bf
examples/sort/: bubblesort-1.bf  insertionsort.bf  quicksort.bf  sort.bf
include/: brainfuck.h  jit.h
include/brainfuck/: brainfuck.h  engine.h  ir.h  jit.h  parser.h  vm.h
include/brainfuck/passes/: clear.h  dump.h
include/brainiac/: brainiac.h  ir.h  parser.h  vm.h
man/: brainfuck.1  brainfuck_darwin.1  brainfuck_linux.1
samples/: Squares.bf  hello_world.bf  output.bf
src/: brainfuck.c  brainfuck.h  brainfuck_darwin.1  brainfuck_interpreter.c  brainfuck_interpreter.h  brainfuck_linux.1  brainfuck_shell.c  brainiac.c  brainiac.h  cli.c  interpreter.c  main.c  passes.c
src/jit/: stub.c  x86_64.c
src/parser/: brainfuck.c  brainfuck.h  parser.c
src/parser/brainfuck/: CMakeLists.txt  brainfuck.c  brainfuck.h
src/vm/: interpreter.c  interpreter.h  lightning.c  lightning.h  vm.c
src/vm/interpreter/: CMakeLists.txt  interpreter.c  interpreter.h
src/vm/lightning/: CMakeLists.txt  lightning.c  lightning.h
test/: hello_world.bf  output.bf  test.bf
tests/: CMakeLists.txt  ir.c  smoke.c
